--- a/recipes/chicken_stir_fry.html
+++ b/recipes/chicken_stir_fry.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/recipes.css">
     <title>Document</title>
 </head>
 <body>
-<h1>Chicken Stir Fry</h1>
+<div class="title">Chicken Stir Fry</div>
 
-<img src="../img/chicken stir-fry.png" alt="Chicken Stir Fry" height="300" width="400">
+<img class="image" src="../img/chicken stir-fry.png" alt="Chicken Stir Fry" height="300" width="400">
 <h3>Description</h3>
 <p>Chicken stir fry is a dish made from chicken that is quickly fried with various vegetables, 
     such as peas, carrots, bell peppers, and onions. The dish is usually seasoned with soy sauce, 
