--- a/recipes/lumpiang_shanghai.html
+++ b/recipes/lumpiang_shanghai.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/recipes.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Lumpiang Shanghai</h1>
-    <img src="../img/lumpia.png" alt="Lumpiang Shanghai" height="400" width="500">
+    <div class="title">Lumpiang Shanghai</div>
+    <img class="image" src="../img/lumpia.png" alt="Lumpiang Shanghai" height="400" width="500">
 
     <h3>Description</h3>
     <p>Lumpiang Shanghai is a Filipino-style spring roll that is typically filled with ground pork, minced onions, carrots, and spices. The filling is then wrapped in a thin spring roll wrapper and deep-fried until crispy. Lumpiang Shanghai is a popular dish in the Philippines and is often served as an appetizer or snack.</p>
