--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles/index.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <div class="title">Odin Recipes</div>
     <ul>
         <li><a href="recipes/chicken_stir_fry.html">Chicken Stir Fry</a></li>
         <li><a href="recipes/adobo.html">Adobo</a></li>
