--- a/recipes/adobo.html
+++ b/recipes/adobo.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/recipes.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Adobo</h1>
-    <img src="../img/adobo.png" alt="Adobo" height="400" width="500">
+    <div class="title">Adobo</div>
+    <img class="image" src="../img/adobo.png" alt="Adobo" height="400" width="500">
 
     <h3>Description</h3>
     <p>Adobo is a popular Filipino dish that involves meat, seafood, or vegetables marinated in vinegar, soy sauce, garlic, and other seasonings. The marinated ingredients are then simmered in the marinade until tender and flavorful. Adobo is a versatile dish that can be made with a variety of proteins, including chicken, pork, beef, and fish. It is often served with rice and is a staple in Filipino cuisine.</p>
